fix: 更新构建产物下载方式和文件匹配模式

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ on:
 # 定义工作流所需的权限
 permissions:
   contents: write # 需要写入内容的权限以创建Release
+  packages: write # 可能需要的额外权限
 
 jobs:
   # 发布作业
@@ -33,23 +34,22 @@ jobs:
 
       # 下载Build工作流生成的所有平台构建产物
       - name: Download all artifacts from Build workflow
-        uses: dawidd6/action-download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
-          workflow: build.yml
-          workflow_conclusion: success
-          # 获取与当前ref相关的构建产物
-          ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_sha || github.ref }}
-          path: artifacts
           name: snake-macos-amd64
+          path: artifacts
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Download arm64 artifacts from Build workflow
-        uses: dawidd6/action-download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
-          workflow: build.yml
-          workflow_conclusion: success
-          ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_sha || github.ref }}
-          path: artifacts
           name: snake-macos-arm64
+          path: artifacts
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      # 检查下载的文件结构
+      - name: Check downloaded files
+        run: find artifacts -type f | sort
 
       # 打包仓库源码为tar.gz文件
       - name: Package repository source code
@@ -71,9 +71,11 @@ jobs:
         if: startsWith(github.ref_name, 'v')
         with:
           files: |
-            artifacts/snake-macos-*.zip  # macOS平台的二进制构建产物
+            artifacts/**/snake-macos-*.zip  # macOS平台的二进制构建产物
             artifacts/snake-source-${{ github.ref_name }}.tar.gz  # 源码包
           tag_name: ${{ github.ref_name }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          name: Release ${{ github.ref_name }}
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub自动提供的令牌
